# cookiechalice

./: README.md  cookiecutter.json
{{cookiecutter.name}}/: .gitignore  Makefile  app.py  pyproject.toml
{{cookiecutter.name}}/.chalice/: config.json
{{cookiecutter.name}}/chalicelib/: config.py  utils.py
{{cookiecutter.name}}/tests/: test_app.py
